# wallrnd

./: .gitignore  Cargo.toml  README.md  index.html  index.md  progress.py  prototype.py  wallrnd.toml
assets/: default.toml  man
assets/css/: style.scss
docs/: Gemfile  crossfade-maker.py  index.md
docs/assets/css/: additions.css  style.scss
prototype/: prototype.py  set-wallpaper
setup/: set-wallpaper  set-wallpaper-1.0  set-wallpaper-1.3  set-wallpaper-future  set-wallpaper-obsolete  wallrnd.toml
src/: cfg.rs  chooser.rs  color.rs  deserializer.rs  frame.rs  lib.rs  log.rs  main.rs  optionfmt.rs  paint.rs  pos.rs  salt.rs  scene.rs  shape.rs  shapes.rs  svg.rs  tesselate.rs  tesselation.rs
