[package]
name = "wallrnd"
version = "0.0.0"
authors = ["Vanille-N <neven.villani@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A generator of random abstract wallpapers"
readme = "README.md"
repository = "https://github.com/Vanille-N/wallrnd"
keywords = []
categories = []

[dependencies]
svg = "0.8.*"
rand = "0.7.*"
serde = "1.0.*"
serde_derive = "1.0.*"
toml = "0.5.*"
chrono = "0.4.*"
delaunator = "0.2.*"

[[bin]]
name = "wallrnd"
