[package]
name = "wallrnd"
version = "1.1.1"
authors = ["Vanille-N <neven.villani@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A generator of random abstract wallpapers"
readme = "README.md"
repository = "https://github.com/Vanille-N/wallrnd"
keywords = ["wallpaper", "random", "desktop"]
categories = ["command-line-utilities", "graphics"]

[dependencies]
rand = "0.7.*"
serde = "1.0.*"
serde_derive = "1.0.*"
toml = "0.5.*"
chrono = "0.4.*"
delaunator = "0.2.*"
resvg = "0.11.*"
usvg = "0.11.*"
wallpaper_rs = "0.1.0"

[[bin]]
name = "wallrnd"
