[package]
name = "wallrnd"
version = "1.2.1"
authors = ["Vanille-N <neven.villani@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A generator of random abstract wallpapers"
readme = "README.md"
repository = "https://github.com/Vanille-N/wallrnd"
keywords = ["wallpaper", "random", "desktop"]
categories = ["command-line-utilities", "graphics"]
include = ["src/**/*", "README.md", "assets/*"]

[features]
default = []
all = ["set-wallpaper", "make-png"]
set-wallpaper = ["wallpaper_rs"]
make-png = ["resvg", "usvg"]

[dependencies]
rand = "0.7.*"
serde = "1.0.*"
serde_derive = "1.0.*"
toml = "0.5.*"
chrono = "0.4.*"
delaunator = "0.2.*"
resvg = { version = "0.11.*", optional = true } # MPL 2.0
usvg = { version = "0.11.*", optional = true } # MPL 2.0
wallpaper_rs = { version = "0.1.0", optional = true } # GPL 3.0

[[bin]]
name = "wallrnd"
